tests/stderr-snapshots/integration__integration__general__const_untyped.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: illegal untyped const
   ┌─ <input>:25:15
   │
25 │         const var x = 3;
   │               ^^^ const vars must have a type


